--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "knex": "^0.15.2",
+    "lokijs": "^1.5.5",
     "sqlite3": "^4.0.3"
   },
   "devDependencies": {
