--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "compressing": "^1.3.1",
     "jest": "^23.6.0",
     "line-by-line": "^0.1.6"
   }
