[:recycle:] Remove useless --no-cache

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "V.Zhufiak A.Malyuk",
   "license": "MIT",
   "scripts": {
-    "test": "jest --no-cache"
+    "test": "jest"
   },
   "dependencies": {},
   "devDependencies": {
